--- a/OdeToBallonsTowerDefence/app/src/main/AndroidManifest.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OdeToBallonsTowerDefence">
         <activity
+            android:name=".HowToActivity"
+            android:exported="false" />
+        <activity
             android:name=".SelectionActivity"
             android:exported="false" />
         <activity
