--- a/OdeToBallonsTowerDefence/app/build.gradle
+++ b/OdeToBallonsTowerDefence/app/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "edu.sdsmt.team6.odetoballonstowerdefence"
+        applicationId "edu.sdsmt.team4.odetoballonstowerdefence"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -32,7 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
